# our-web3-application

./: .cpanel.yml  CONTRIBUING.md  Cargo.toml  README.md  structure.txt
application/: Cargo.toml
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  prelude.rs  server.rs  templates.rs
crates/server/static/css/: style.css
crates/server/static/js/: main.js
crates/server/templates/: Landing.html  Waitlist.html  calculator.html  crypto-top-table.html  exchange-rate.html  index.html
server/: Cargo.toml
server/src/: main.rs
server/templates/: index.html
