[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.0", features = ["full"] }
