[package]
name = "application-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
application = { path = "../application/" }
serde = { version = "1.0.228", features = ["derive"] }
